tests/fail/cast_float_to_pointer/test.yap
fn main() {
    f32 f = 1.5;
    i32@ p = f.(i32@);
}
